[tool.poetry]
name = "lnsplash"
version = "0.0.1"
description = ""
authors = ["N"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.6"
Flask = "^2.0.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pdir2 = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
